# gcp-foundation-platform

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  VALIDATION_REPORT.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  terraform-plan.yml
config/: example.organization.yaml
diagrams/: foundation-platform.mmd
docs/: architecture.md  onboarding.md  operations.md  roadmap.md
docs/adr/: 0001-python-cli-for-platform-automation.md  0002-workload-identity-federation.md
docs/runbooks/: drift-detection.md  failed-project-creation.md  iam-rollback.md
examples/: README.md
scripts/: bootstrap_local.sh  render_docs.sh
src/gcp_foundation/: __init__.py  __main__.py  cli.py  config.py  generator.py  inventory.py  terraform.py  validators.py
terraform/: README.md
terraform/foundation/: backend.tf.example  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
terraform/modules/folder-factory/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/iam-bindings/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/logging/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/org-policies/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/project-factory/: README.md  main.tf  (+2 more)
tests/: test_config.py  test_inventory.py  test_terraform.py  test_validators.py
tests/fixtures/: minimal.organization.yaml
(+4 files in other folders)
