[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gcp-foundation-platform"
version = "0.1.0"
description = "Production-style GCP foundation platform with Terraform and a Python automation CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Platform Engineering" }
]
keywords = ["gcp", "terraform", "platform-engineering", "devops", "landing-zone"]
dependencies = [
  "pydantic>=2.7,<3.0",
  "PyYAML>=6.0,<7.0",
  "rich>=13.7,<15.0",
  "typer>=0.12,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<8.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
  "types-PyYAML>=6.0"
]

[project.scripts]
gcp-foundation = "gcp_foundation.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gcp_foundation"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["gcp_foundation"]
